# P3-DX

./: README.md
.vim/: coc-settings.json
P3-DX/: CMakeLists.txt  package.xml
P3-DX/launch/: p3dx.launch.py
control/: CMakeLists.txt  package.xml
control/include/control/: control.h  smc.h
control/src/: control.cpp  main.cpp  smc.cpp  test.cpp
controller/: CMakeLists.txt  package.xml
controller/include/controller/: controller.h
controller/src/: controller.cpp  main.cpp
p3dx/: CMakeLists.txt  package.xml
p3dx/launch/: p3dx.launch.py
p3dxmsgs/: CMakeLists.txt  package.xml
p3dxmsgs/srv/: State.srv
simulation/: CMakeLists.txt  package.xml
simulation/scenes/: pioneer.ttt
simulation/scripts/: ros2Interface.lua  simlaunch.sh
